# malloc_world

./: .gitignore  CMakeLists.txt  README.md
resources/: save.txt
src/: battles.c  cli.c  inventory.c  main.c  map.c  monsters.c  move.c  player.c  pnj.c  save.c  structures.c
src/battles/: battles.c  battles.h
src/cli/: cli.c  cli.h
src/include/: battles.h  cli.h  inventory.h  items.h  map.h  monsters.h  move.h  player.h  pnj.h  save.h  structures.h
src/inventory/: inventory.c  inventory.h
src/items/: items.c  items.h
src/map/: map.c  map.h
src/monsters/: monsters.c  monsters.h
src/move/: move.c  move.h
src/player/: player.c  player.h
src/pnj/: pnj.c  pnj.h
src/save/: save.c  save.h
